fixed spacing for starter area

--- a/src/components/Characters/Characters.css
+++ b/src/components/Characters/Characters.css
@@ -65,8 +65,8 @@
   width: 17.5%;
   border: 3px solid black;
   background-color: rgb(56, 188, 233);
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: space-around;
+  align-items: center;
   text-align: center;
 }
 
@@ -180,7 +180,6 @@
   text-shadow: 1px 1px white;
   font-size: 28px;
 }
-
 
 .starter-single-box {
   height: 50%;
